// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@dasreda/components/Droplist Droplist: large 1`] = `
.c1 {
  width: 100%;
}

.c1 .ScrollbarsCustom-Wrapper {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c1 .ScrollbarsCustom-Scroller {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin-right: -21px;
  padding-right: 22px !important;
  overflow: hidden overlay !important;
}

.c1 .ScrollbarsCustom-Content {
  box-sizing: border-box;
  min-width: 100%;
  min-height: 100%;
}

.c1 .ScrollbarsCustom-TrackY {
  position: absolute;
  top: 0;
  right: 0px;
  width: 4px;
  height: 100%;
  overflow: hidden;
  background-color: transparent;
  border-radius: 4px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .ScrollbarsCustom-ThumbY {
  top: 0;
  right: 8px;
  width: 4px;
  height: 56px;
  background-color: #D6D6DE;
  border-radius: 8px;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  cursor: pointer;
}

.c2 {
  margin: -6px 0;
  padding: 0;
  overflow-y: hidden;
}

.c3 {
  position: relative;
  display: block;
  padding: 6px 0;
  overflow: hidden !important;
  font: 400 18px/26px "SB Sans Interface",sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  list-style: none;
  cursor: pointer;
  -webkit-transition: color 0.3s ease-in-out;
  transition: color 0.3s ease-in-out;
}

.c0 {
  width: 348px;
  padding: 16px 8px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 20px;
  box-shadow: 0 6px 32px rgba(135,139,159,0.24);
}

@media (min-width:1280px) {
  .c3:hover {
    color: #21BA72;
  }
}

@media (min-width:1280px) {

}

@media only screen and (max-width:480px) {

}

@media only screen and (max-width:480px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="ScrollbarsCustom c1"
      style="position: relative; height: 250px;"
    >
      <div
        class="ScrollbarsCustom-Wrapper"
        style="position: absolute; overflow: hidden;"
      >
        <div
          class="ScrollbarsCustom-Scroller"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow-y: hidden; overflow-x: hidden;"
        >
          <div
            class="ScrollbarsCustom-Content"
            style="padding: 0.05px;"
          >
            <ul
              class="c2"
            >
              <li
                class="c3"
              >
                Анапа - longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Липецк
              </li>
              <li
                class="c3"
              >
                Львов
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
        />
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`@dasreda/components/Droplist Droplist: medium 1`] = `
.c1 {
  width: 100%;
}

.c1 .ScrollbarsCustom-Wrapper {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c1 .ScrollbarsCustom-Scroller {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin-right: -21px;
  padding-right: 22px !important;
  overflow: hidden overlay !important;
}

.c1 .ScrollbarsCustom-Content {
  box-sizing: border-box;
  min-width: 100%;
  min-height: 100%;
}

.c1 .ScrollbarsCustom-TrackY {
  position: absolute;
  top: 0;
  right: 0px;
  width: 4px;
  height: 100%;
  overflow: hidden;
  background-color: transparent;
  border-radius: 4px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .ScrollbarsCustom-ThumbY {
  top: 0;
  right: 8px;
  width: 4px;
  height: 56px;
  background-color: #D6D6DE;
  border-radius: 8px;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  cursor: pointer;
}

.c2 {
  margin: -6px 0;
  padding: 0;
  overflow-y: hidden;
}

.c3 {
  position: relative;
  display: block;
  padding: 6px 0;
  overflow: hidden !important;
  font: 400 16px/24px "SB Sans Interface",sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  list-style: none;
  cursor: pointer;
  -webkit-transition: color 0.3s ease-in-out;
  transition: color 0.3s ease-in-out;
}

.c0 {
  width: 348px;
  padding: 16px 8px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 20px;
  box-shadow: 0 6px 32px rgba(135,139,159,0.24);
}

@media (min-width:1280px) {
  .c3:hover {
    color: #21BA72;
  }
}

@media (min-width:1280px) {

}

@media only screen and (max-width:480px) {

}

@media only screen and (max-width:480px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="ScrollbarsCustom c1"
      style="position: relative; height: 250px;"
    >
      <div
        class="ScrollbarsCustom-Wrapper"
        style="position: absolute; overflow: hidden;"
      >
        <div
          class="ScrollbarsCustom-Scroller"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow-y: hidden; overflow-x: hidden;"
        >
          <div
            class="ScrollbarsCustom-Content"
            style="padding: 0.05px;"
          >
            <ul
              class="c2"
            >
              <li
                class="c3"
              >
                Анапа - longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Липецк
              </li>
              <li
                class="c3"
              >
                Львов
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
        />
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`@dasreda/components/Droplist Droplist: medium with \`onSelect\` 1`] = `
.c1 {
  width: 100%;
}

.c1 .ScrollbarsCustom-Wrapper {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c1 .ScrollbarsCustom-Scroller {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin-right: -21px;
  padding-right: 22px !important;
  overflow: hidden overlay !important;
}

.c1 .ScrollbarsCustom-Content {
  box-sizing: border-box;
  min-width: 100%;
  min-height: 100%;
}

.c1 .ScrollbarsCustom-TrackY {
  position: absolute;
  top: 0;
  right: 0px;
  width: 4px;
  height: 100%;
  overflow: hidden;
  background-color: transparent;
  border-radius: 4px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .ScrollbarsCustom-ThumbY {
  top: 0;
  right: 8px;
  width: 4px;
  height: 56px;
  background-color: #D6D6DE;
  border-radius: 8px;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  cursor: pointer;
}

.c4 {
  position: absolute;
  top: 50%;
  right: 8px;
  width: 24px;
  height: 24px;
  margin-top: 1px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  fill: #21BA72;
}

.c2 {
  margin: -6px 0;
  padding: 0;
  overflow-y: hidden;
}

.c3 {
  position: relative;
  display: block;
  padding: 6px 0;
  overflow: hidden !important;
  font: 400 16px/24px "SB Sans Interface",sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  list-style: none;
  cursor: pointer;
  -webkit-transition: color 0.3s ease-in-out;
  transition: color 0.3s ease-in-out;
}

.c0 {
  width: 348px;
  padding: 16px 8px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 20px;
  box-shadow: 0 6px 32px rgba(135,139,159,0.24);
}

@media (min-width:1280px) {
  .c3:hover {
    color: #21BA72;
  }
}

@media (min-width:1280px) {

}

@media only screen and (max-width:480px) {

}

@media only screen and (max-width:480px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="ScrollbarsCustom c1"
      style="position: relative; height: 250px;"
    >
      <div
        class="ScrollbarsCustom-Wrapper"
        style="position: absolute; overflow: hidden;"
      >
        <div
          class="ScrollbarsCustom-Scroller"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow-y: hidden; overflow-x: hidden;"
        >
          <div
            class="ScrollbarsCustom-Content"
            style="padding: 0.05px;"
          >
            <ul
              class="c2"
            >
              <li
                class="c3"
              >
                Анапа - longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
                <svg
                  class="c4"
                  fill="none"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.05 11.576a1.248 1.248 0 00-1.682-.036 1.06 1.06 0 00-.04 1.57l3.567 3.546c.223.219.532.343.856.344h.004c.323 0 .63-.122.854-.339l8.056-7.777a1.06 1.06 0 00-.027-1.571 1.248 1.248 0 00-1.68.025L9.76 14.286l-2.712-2.71z"
                  />
                </svg>
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Липецк
              </li>
              <li
                class="c3"
              >
                Львов
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
        />
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`@dasreda/components/Droplist Droplist: small 1`] = `
.c1 {
  width: 100%;
}

.c1 .ScrollbarsCustom-Wrapper {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c1 .ScrollbarsCustom-Scroller {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin-right: -21px;
  padding-right: 22px !important;
  overflow: hidden overlay !important;
}

.c1 .ScrollbarsCustom-Content {
  box-sizing: border-box;
  min-width: 100%;
  min-height: 100%;
}

.c1 .ScrollbarsCustom-TrackY {
  position: absolute;
  top: 0;
  right: 0px;
  width: 4px;
  height: 100%;
  overflow: hidden;
  background-color: transparent;
  border-radius: 4px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .ScrollbarsCustom-ThumbY {
  top: 0;
  right: 8px;
  width: 4px;
  height: 56px;
  background-color: #D6D6DE;
  border-radius: 8px;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  cursor: pointer;
}

.c2 {
  margin: -6px 0;
  padding: 0;
  overflow-y: hidden;
}

.c3 {
  position: relative;
  display: block;
  padding: 6px 0;
  overflow: hidden !important;
  font: 400 14px/20px "SB Sans Interface",sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  list-style: none;
  cursor: pointer;
  -webkit-transition: color 0.3s ease-in-out;
  transition: color 0.3s ease-in-out;
}

.c0 {
  width: 348px;
  padding: 16px 8px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 20px;
  box-shadow: 0 6px 32px rgba(135,139,159,0.24);
}

@media (min-width:1280px) {

}

@media only screen and (max-width:480px) {

}

@media only screen and (max-width:480px) {

}

@media (min-width:1280px) {
  .c3:hover {
    color: #21BA72;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="ScrollbarsCustom c1"
      style="position: relative; height: 250px;"
    >
      <div
        class="ScrollbarsCustom-Wrapper"
        style="position: absolute; overflow: hidden;"
      >
        <div
          class="ScrollbarsCustom-Scroller"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow-y: hidden; overflow-x: hidden;"
        >
          <div
            class="ScrollbarsCustom-Content"
            style="padding: 0.05px;"
          >
            <ul
              class="c2"
            >
              <li
                class="c3"
              >
                Анапа - longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Липецк
              </li>
              <li
                class="c3"
              >
                Львов
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
        />
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`@dasreda/components/Droplist Droplist: small with \`value\` 1`] = `
.c1 {
  width: 100%;
}

.c1 .ScrollbarsCustom-Wrapper {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.c1 .ScrollbarsCustom-Scroller {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin-right: -21px;
  padding-right: 22px !important;
  overflow: hidden overlay !important;
}

.c1 .ScrollbarsCustom-Content {
  box-sizing: border-box;
  min-width: 100%;
  min-height: 100%;
}

.c1 .ScrollbarsCustom-TrackY {
  position: absolute;
  top: 0;
  right: 0px;
  width: 4px;
  height: 100%;
  overflow: hidden;
  background-color: transparent;
  border-radius: 4px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .ScrollbarsCustom-ThumbY {
  top: 0;
  right: 8px;
  width: 4px;
  height: 56px;
  background-color: #D6D6DE;
  border-radius: 8px;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  cursor: pointer;
}

.c4 {
  position: absolute;
  top: 50%;
  right: 8px;
  width: 24px;
  height: 24px;
  margin-top: 1px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  fill: #21BA72;
}

.c2 {
  margin: -6px 0;
  padding: 0;
  overflow-y: hidden;
}

.c3 {
  position: relative;
  display: block;
  padding: 6px 0;
  overflow: hidden !important;
  font: 400 14px/20px "SB Sans Interface",sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  list-style: none;
  cursor: pointer;
  -webkit-transition: color 0.3s ease-in-out;
  transition: color 0.3s ease-in-out;
}

.c0 {
  width: 348px;
  padding: 16px 8px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 20px;
  box-shadow: 0 6px 32px rgba(135,139,159,0.24);
}

@media (min-width:1280px) {
  .c3:hover {
    color: #21BA72;
  }
}

@media (min-width:1280px) {

}

@media only screen and (max-width:480px) {

}

@media only screen and (max-width:480px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="ScrollbarsCustom c1"
      style="position: relative; height: 250px;"
    >
      <div
        class="ScrollbarsCustom-Wrapper"
        style="position: absolute; overflow: hidden;"
      >
        <div
          class="ScrollbarsCustom-Scroller"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow-y: hidden; overflow-x: hidden;"
        >
          <div
            class="ScrollbarsCustom-Content"
            style="padding: 0.05px;"
          >
            <ul
              class="c2"
            >
              <li
                class="c3"
              >
                Анапа - longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
                <svg
                  class="c4"
                  fill="none"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.05 11.576a1.248 1.248 0 00-1.682-.036 1.06 1.06 0 00-.04 1.57l3.567 3.546c.223.219.532.343.856.344h.004c.323 0 .63-.122.854-.339l8.056-7.777a1.06 1.06 0 00-.027-1.571 1.248 1.248 0 00-1.68.025L9.76 14.286l-2.712-2.71z"
                  />
                </svg>
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Липецк
              </li>
              <li
                class="c3"
              >
                Львов
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
              <li
                class="c3"
              >
                Анапа
              </li>
              <li
                class="c3"
              >
                Владмир
              </li>
              <li
                class="c3"
              >
                Волгоград
              </li>
              <li
                class="c3"
              >
                Димитров
              </li>
              <li
                class="c3"
              >
                Йошкар-Ола
              </li>
              <li
                class="c3"
              >
                Казань
              </li>
              <li
                class="c3"
              >
                Калининград
              </li>
              <li
                class="c3"
              >
                Киров
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
        />
      </div>
      <div
        class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
        style="display: none;"
      >
        <div
          class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
        />
      </div>
    </div>
  </div>
</div>
`;
